# telecom-p3

./: CommonIfc.bsv  CommonTest.bsv  FrameDelimiter.bsv  Makefile  ManchesterDecoder.bsv  README.md  SFDLocator.bsv  TestManchesterDecoder.bsv  TestSFDLocator.bsv  Top.bsv  run-grader  tangnano9k.cst  testcases.in  testcases.out  testcases.sfd  top.v
software/: pyproject.toml  sender.py
